@@ -1,4 +1,3 @@
 include *.txt *.md
 recursive-include docs *.rst *.py Makefile
 recursive-include conf *.conf
-recursive-include plugins *.py
