@@ -41,8 +41,6 @@ peers-group {
   snmp-peer-id: 100
 }
 
-plugin-modules-path-list: ./plugins
-
 plugin-group {
   plugin-module: rewrite
   plugin-options: config=${config-dir}/plugins/rewrite.conf
