@@ -4,6 +4,8 @@ Revision 0.1.0, released XX-05-2017
 
 - SNMP TRAP PDU forwarding implemented
 - SNMP PDU OIDs filtering plugin implemented
+- Plugins collection moved into the data directory inside Python
+  package for easier distribution
 - The "rewrite" plugin reworked to match OIDs and regexp values
 - Single SNMP request scope context is now served to the plugins (plugin
   API version bumped)
